# open-lib

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  main.cpp
include/openLib/: openLib.hpp  openLib.inl
lib/: DynamicLibrary.cpp  DynamicLibrary.hpp  DynamicLibrary.inl  openLib.cpp  openLib.hpp  openLib.inl
